deployments/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    com.wise2c.service: lb-webhook
  name: lb-webhook
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      com.wise2c.service: lb-webhook
  template:
    metadata:
      labels:
        com.wise2c.service: lb-webhook
    spec:
      containers:
      - image: registry.cn-hangzhou.aliyuncs.com/mojo/lb-webhook:master
        imagePullPolicy: IfNotPresent
        name: lb-webhook
        args:
        - "--memory=100m"
        - "--cpu=200m"
        - "--tls-cert-file=/etc/certs/server.crt"
        - "--tls-private-key-file=/etc/certs/server.key"
        volumeMounts:
        - mountPath: /etc/certs
          name: config
      serviceAccount: webhook
      volumes:
      - name: config
        secret:
          secretName: lb-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    com.wise2c.service: lb-webhook
  name: lb-webhook
  namespace: default
spec:
  ports:
  - name: https
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    com.wise2c.service: lb-webhook
