deployments/admissionregistration.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: config
webhooks:
- name: webhook.wisecloud-agent.svc
  rules:
  - apiGroups:
    - "*"
    apiVersions:
    - "*"
    operations:
    - CREATE
    resources:
    - deployments
  clientConfig:
    service:
      namespace: wisecloud-agent
      name: webhook
      path: /deployments/mutate
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURIekNDQWdlZ0F3SUJBZ0lKQUlNbmVPU25EUVpVTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ1l4SkRBaUJnTlYKQkFNTUczZGxZbWh2YjJzdWQybHpaV05zYjNWa0xXRm5aVzUwTG5OMll6QWVGdzB4T1RBM01EUXhNREE1TURkYQpGdzB5T1RBM01ERXhNREE1TURkYU1DWXhKREFpQmdOVkJBTU1HM2RsWW1odmIyc3VkMmx6WldOc2IzVmtMV0ZuClpXNTBMbk4yWXpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTjJuMzU1cnd5UGsKTEI1Y3RjdnY3STlPYkpmM1ZESS9ncmdJMWdtd2Y5b2NCZzF5Tm1wVGx1cVhuYndUb1ZjTCtWVzgwUFZvMStEUApMSDdBYS8xcE9QR0 [...]
